--- a/blog/templates/blog/evaluacion2.html
+++ b/blog/templates/blog/evaluacion2.html
@@ -1,10 +1,10 @@
 <html>
     <head>
-        <title>Hola</title>
+        <title>Blog sobre juegos indie</title>
     </head>
     <body>
     <div>
-        <h1><a href="/">asd</a></h1>
+        <h1><a href="/">a</a></h1>
     </div>
 
 {% for Juegos_Indie in publicaciones %}
