--- a/blog/templates/blog/evaluacion2.html
+++ b/blog/templates/blog/evaluacion2.html
@@ -3,7 +3,7 @@
         <title>Blog sobre juegos indie</title>
     </head>
     <body>
-        <img src="https://dixgamer.com/wp-content/uploads/2023/11/juegos-indie-1.jpg"
+        <img src="https://dixgamer.com/wp-content/uploads/2023/11/juegos-indie-1.jpg">
 
 {% for Juegos_Indie in publicaciones %}
 <div>
